# compiladores

./: CMakeLists.txt  README.md  TODO.txt  parser.y  scanner.l
doc/: Doxyfile
g3/: main  report
iloc_parser/: CMakeLists.txt  instructions  parser.y  scanner.l
iloc_parser/include/: iloc_parser.h
iloc_parser/input/: 01.i  02.i  03.i  04.i  05.i  06.i  07.i  08.i  09.i  10.i  11.i  alg_optim.i  inst_machine.i
iloc_parser/scripts/: cria_objeto.sh
iloc_parser/src/: iloc_parser.c
include/: comp_dict.h  comp_grammar.h  comp_graph.h  comp_list.h  comp_stack.h  comp_tree.h  gv.h  hash_table.h  iks_ast.h  iks_dict.h  iks_grammar.h  iks_graph.h  iks_gv.h  iks_hash.h  iks_iloc.h  iks_list.h  iks_optim.h  iks_stack.h  iks_tree.h  iks_types.h  main.h  tokens.h
input/etapa2/: etapa2-1.c  etapa2-2.c  etapa2-3.c
input/etapa3/: etapa3-1.c  etapa3-2.c  grupoC-dijkstra.iks  grupoC-shellsort.iks  i01.iks  i02.iks  i04.iks  i06.iks  i08.iks  i09.iks  i10.iks  i100.iks  i11.iks  i12.iks  i13.iks  i14.iks  i15.iks  i16.iks  i17.iks  i18.iks  i19.iks  i20.iks  i21.iks  i22.iks  i23.iks  i24.iks  i25.iks  i26.iks  i27.iks  i28.iks  i29.iks  i30.iks  i31.iks  i32.iks  i33.iks  i34.iks  i35.iks  i36.iks  i37.iks  i38.iks  (+6 more)
input/etapa3/ref/: i00.dot  i00.iks  i01.dot  i02.dot  i03.dot  i03.iks  i04.dot  i05.dot  i05.iks  i06.dot  i07.dot  i07.iks  i08.dot  i09.dot  i10.dot  i11.dot  i12.dot  i13.dot  i14.dot  i15.dot  i15.iks  i16.dot  i17.dot  i18.dot  i18.iks  i19.dot  i20.dot  i21.dot  i21.iks  i22.dot  i23.dot  i24.dot  i25.dot  i25.iks  i26.dot  i26.iks  i27.dot  (+36 more)
input/etapa4/: errors.h  etapa4-test1-2.iks  etapa4-test1.iks  etapa4-test2-declared.iks  etapa4-test2.iks  etapa4-test3-undeclared.iks  etapa4-test4-func-bad-decl.iks  etapa4-test4.iks  etapa4-test5.iks  etapa4-test6.iks  etapa4-test6.iks~  s00.iks  s01.iks  s02.iks  s03.iks  s04.iks  s05.iks  s06.iks  s07.iks  s08.iks  s09.iks  s10.iks  s11.iks  s12.iks  s13.iks  s14.iks  s15.iks  s16.iks  s17.iks  s18.iks  s19.iks  s20.iks  s21.iks  s22.iks  s23.iks  s24.iks  s25.iks  s26.iks  s27.iks  s28.iks  (+4 more)
input/etapa5/: 00.iks  01.iks  02.iks  03.iks  04.iks  05.iks  06.iks  07.iks  08.iks  09.iks  10.iks  11.iks  e00.iks  e01.iks  e02.iks  e03.iks  e04.iks  e05.iks  e06.iks  e07.iks  e08.iks  e09.iks  e10.iks  e11.iks  e12.iks  e13.iks  e14.iks
input/etapa6/: 00.iks  01.iks  02.iks  03.iks
output/etapa3/: .dot  saida.dot
output/etapa7/: .saida-alg_optim2.i.swp  saida-alg_optim.i  saida-alg_optim2.i  saida-const_precalc.i  saida-inst_machine.i
scripts/: build_run.sh  build_run_e5.sh  compare_bin.sh  compila.sh  print_ast.sh  test-etapa3.sh  test-etapa4.sh  test-etapa7.sh  test-valgrind.sh  testando-etapa3.sh
src/: comp_dict.c  comp_grammar.c  comp_graph.c  comp_list.c  comp_stack.c  comp_tree.c  gv.c  hash_table.c  iks_ast.c  iks_dict.c  iks_grammar.c  iks_graph.c  iks_gv.c  iks_hash.c  iks_iloc.c  iks_list.c  iks_optim.c  iks_stack.c  iks_tree.c  iks_types.c  main.c
src/tests/: test-graph.c  test-list.c  test-main-etapa1.c  test.c
(+57 files in other folders)
