CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT(compilador)
FIND_PACKAGE(FLEX REQUIRED)
FIND_PACKAGE(BISON REQUIRED)
FLEX_TARGET(scanner scanner.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.c)
BISON_TARGET(parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.c VERBOSE parser.output)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
INCLUDE_DIRECTORIES(${compilador_SOURCE_DIR}/include/)
INCLUDE_DIRECTORIES(${compilador_SOURCE_DIR}/../include/)
ADD_EXECUTABLE(iloc_parser
  ${FLEX_scanner_OUTPUTS}
  ${BISON_parser_OUTPUTS}
  src/iloc_parser.c
  ../src/iks_list.c
)
TARGET_LINK_LIBRARIES(iloc_parser ${FLEX_LIBRARIES})
